- Back end setup (Dapper, Basic CRUD operations written, Models) - API Setup (Able to perform simple CRUD actions for Vehicles)

--- a/Billboard_API/appsettings.json
+++ b/Billboard_API/appsettings.json
@@ -1,9 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDb": "Server=localhost;Database=BillboardApp;Trusted_Connection=True;TrustServerCertificate=True",
+    "MongoDb": "mongodb+srv://FirstClusterUser:ClusterPassword-0G3F3@firstcluster.d0m9iub.mongodb.net/?retryWrites=true&w=majority&appName=FirstCluster"
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Billboard_API_Actions.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Billboard_API"
+    }
+  }
 }
